--- a/notebooks/IS-FinMarket.ipynb
+++ b/notebooks/IS-FinMarket.ipynb
@@ -182,14 +182,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "outputs": [
     {
      "data": {
-      "text/plain": "                          CEFD\nTradingDate Symbol            \n19980430    184688  101.500000\n            500001  101.500000\n19980630    184688   60.272500\n            500001   60.272500\n            500003   60.272500\n...                        ...\n20221222    501099    0.008667\n            501200    0.008667\n            501201    0.008667\n            501202    0.008667\n            501220    0.008667\n\n[38848 rows x 1 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th>CEFD</th>\n    </tr>\n    <tr>\n      <th>TradingDate</th>\n      <th>Symbol</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th rowspan=\"2\" valign=\"top\">19980430</th>\n      <th>184688</th>\n      <td>101.500000</td>\n    </tr>\n    <tr>\n      <th>500001</th>\n      <td>101.500000</td>\n    </tr>\n    <tr>\n      <th rowspan=\"3\" valign=\"top\">19980630</th>\n      <th>184688</th>\n      <td>60.272500</td>\n    </tr>\n    <tr>\n      <th>500001</th>\n      <td>60.272500</td>\n    </tr>\n    <tr>\n      <th>500003</th>\n      <td>60.272500</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th rowspan=\"5\" valign=\"top\">20221222</th>\n      <th>501099</th>\n      <td>0.008667</td>\n    </tr>\n    <tr>\n      <th>501200</th>\n      <td>0.008667</td>\n    </tr>\n    <tr>\n      <th>501201</th>\n      <td>0.008667</td>\n    </tr>\n    <tr>\n      <th>501202</th>\n      <td>0.008667</td>\n    </tr>\n    <tr>\n      <th>501220</th>\n      <td>0.008667</td>\n    </tr>\n  </tbody>\n</table>\n<p>38848 rows × 1 columns</p>\n</div>"
+      "text/plain": "                   CEFD\nTradingDate            \n19980430     101.500000\n19980630      60.272500\n19980731      41.500000\n19980831      28.418000\n19980930      31.054000\n...                 ...\n20221216       1.787500\n20221219       0.104000\n20221220      -0.458947\n20221221      -0.160000\n20221222       0.008667\n\n[2638 rows x 1 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>CEFD</th>\n    </tr>\n    <tr>\n      <th>TradingDate</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>19980430</th>\n      <td>101.500000</td>\n    </tr>\n    <tr>\n      <th>19980630</th>\n      <td>60.272500</td>\n    </tr>\n    <tr>\n      <th>19980731</th>\n      <td>41.500000</td>\n    </tr>\n    <tr>\n      <th>19980831</th>\n      <td>28.418000</td>\n    </tr>\n    <tr>\n      <th>19980930</th>\n      <td>31.054000</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>20221216</th>\n      <td>1.787500</td>\n    </tr>\n    <tr>\n      <th>20221219</th>\n      <td>0.104000</td>\n    </tr>\n    <tr>\n      <th>20221220</th>\n      <td>-0.458947</td>\n    </tr>\n    <tr>\n      <th>20221221</th>\n      <td>-0.160000</td>\n    </tr>\n    <tr>\n      <th>20221222</th>\n      <td>0.008667</td>\n    </tr>\n  </tbody>\n</table>\n<p>2638 rows × 1 columns</p>\n</div>"
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
     "    '''\n",
     "    时间序列\n",
     "    '''\n",
-    "    # df = df.groupby(level=['TradingDate']).first()\n",
+    "    df = df.groupby(level=['TradingDate']).first()\n",
     "\n",
     "    return df.rename(columns={'DayAvgCR': 'CEFD'})[['CEFD']]\n",
     "\n",
@@ -378,8 +378,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 21,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                      pct_chg  index  trade_year      CEFD       RIPO  NIPO  \\\ntrade_date ts_code                                                            \n19901219   000001.SH  -0.0200      1        1990       NaN  48.896982   7.0   \n19901220   000001.SH   4.4109      2        1990       NaN        NaN   NaN   \n19901221   000001.SH   4.5407      3        1990       NaN        NaN   NaN   \n19901224   000001.SH   4.9666      4        1990       NaN        NaN   NaN   \n19901225   000001.SH   4.9760      5        1990       NaN        NaN   NaN   \n...                       ...    ...         ...       ...        ...   ...   \n20221201   000001.SH   0.4486   7807        2022 -1.194500  -0.116667   1.0   \n20221202   000001.SH  -0.2946   7808        2022  1.685714   0.514767   1.0   \n20221205   000001.SH   1.7639   7809        2022 -1.107368   0.439883   1.0   \n20221206   000001.SH   0.0224   7810        2022 -1.408421        NaN   NaN   \n20221207   000001.SH  -0.4020   7811        2022 -1.188333   0.335000   1.0   \n\n                         TURN   TURN_MA   SR  lnPD  \ntrade_date ts_code                                  \n19901219   000001.SH  0.00062       NaN  5.9   NaN  \n19901220   000001.SH  0.00012       NaN  5.9   NaN  \n19901221   000001.SH  0.00003       NaN  5.9   NaN  \n19901224   000001.SH  0.00004       NaN  5.9   NaN  \n19901225   000001.SH  0.00001       NaN  5.9   NaN  \n...                       ...       ...  ...   ...  \n20221201   000001.SH  0.00748  0.001557  NaN   NaN  \n20221202   000001.SH  0.00591 -0.000016  NaN   NaN  \n20221205   000001.SH  0.00866  0.002730  NaN   NaN  \n20221206   000001.SH  0.00722  0.001288  NaN   NaN  \n20221207   000001.SH  0.00685  0.000916  NaN   NaN  \n\n[7811 rows x 10 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th>pct_chg</th>\n      <th>index</th>\n      <th>trade_year</th>\n      <th>CEFD</th>\n      <th>RIPO</th>\n      <th>NIPO</th>\n      <th>TURN</th>\n      <th>TURN_MA</th>\n      <th>SR</th>\n      <th>lnPD</th>\n    </tr>\n    <tr>\n      <th>trade_date</th>\n      <th>ts_code</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>19901219</th>\n      <th>000001.SH</th>\n      <td>-0.0200</td>\n      <td>1</td>\n      <td>1990</td>\n      <td>NaN</td>\n      <td>48.896982</td>\n      <td>7.0</td>\n      <td>0.00062</td>\n      <td>NaN</td>\n      <td>5.9</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>19901220</th>\n      <th>000001.SH</th>\n      <td>4.4109</td>\n      <td>2</td>\n      <td>1990</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.00012</td>\n      <td>NaN</td>\n      <td>5.9</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>19901221</th>\n      <th>000001.SH</th>\n      <td>4.5407</td>\n      <td>3</td>\n      <td>1990</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.00003</td>\n      <td>NaN</td>\n      <td>5.9</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>19901224</th>\n      <th>000001.SH</th>\n      <td>4.9666</td>\n      <td>4</td>\n      <td>1990</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.00004</td>\n      <td>NaN</td>\n      <td>5.9</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>19901225</th>\n      <th>000001.SH</th>\n      <td>4.9760</td>\n      <td>5</td>\n      <td>1990</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.00001</td>\n      <td>NaN</td>\n      <td>5.9</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>20221201</th>\n      <th>000001.SH</th>\n      <td>0.4486</td>\n      <td>7807</td>\n      <td>2022</td>\n      <td>-1.194500</td>\n      <td>-0.116667</td>\n      <td>1.0</td>\n      <td>0.00748</td>\n      <td>0.001557</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>20221202</th>\n      <th>000001.SH</th>\n      <td>-0.2946</td>\n      <td>7808</td>\n      <td>2022</td>\n      <td>1.685714</td>\n      <td>0.514767</td>\n      <td>1.0</td>\n      <td>0.00591</td>\n      <td>-0.000016</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>20221205</th>\n      <th>000001.SH</th>\n      <td>1.7639</td>\n      <td>7809</td>\n      <td>2022</td>\n      <td>-1.107368</td>\n      <td>0.439883</td>\n      <td>1.0</td>\n      <td>0.00866</td>\n      <td>0.002730</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>20221206</th>\n      <th>000001.SH</th>\n      <td>0.0224</td>\n      <td>7810</td>\n      <td>2022</td>\n      <td>-1.408421</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.00722</td>\n      <td>0.001288</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>20221207</th>\n      <th>000001.SH</th>\n      <td>-0.4020</td>\n      <td>7811</td>\n      <td>2022</td>\n      <td>-1.188333</td>\n      <td>0.335000</td>\n      <td>1.0</td>\n      <td>0.00685</td>\n      <td>0.000916</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n<p>7811 rows × 10 columns</p>\n</div>"
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def merge_bw():\n",
     "    \"\"\"\n",
@@ -388,6 +398,7 @@
     "    df = cal_cefd().to_pandas().join(cal_ipo().to_pandas(), how='outer').join(cal_turn().to_pandas(), how='outer')\n",
     "    df.index.names = ['trade_date']\n",
     "    df = df.reset_index()\n",
+    "\n",
     "    \"\"\"\n",
     "    只有年份\n",
     "    \"\"\"\n",
@@ -397,75 +408,83 @@
     "    df = df.reset_index()\n",
     "\n",
     "    \"\"\"\n",
-    "    空值处理,主要是IPO,\n",
+    "    空值处理,IPO填充0,CEFD回填\n",
     "    \"\"\"\n",
-    "    # df = df.fillna(0)\n",
+    "    df = df.fillna(0)\n",
     "\n",
     "    \"\"\"\n",
     "    合并股指市场数据\n",
     "    \"\"\"\n",
     "    # 20170824\n",
-    "    # df = cudf.merge(\n",
-    "    #         cudf.read_parquet('/data/DataSets/investor_sentiment/IDX_BAR_PANEL.parquet', columns=['ts_code', 'pct_chg']).reset_index(),\n",
-    "    #         cudf.from_pandas(df).reset_index(),\n",
-    "    #         left_on='trade_date', right_on='TradingDate', how='left').set_index(['trade_date', 'ts_code']).sort_index()\n",
+    "    df = pd.merge(\n",
+    "            pd.read_parquet('/data/DataSets/investor_sentiment/IDX_BAR_PANEL.parquet', columns=['ts_code', 'pct_chg']).reset_index(),\n",
+    "            df.reset_index(),\n",
+    "            left_on='trade_date', right_on='trade_date', how='left').set_index(['trade_date', 'ts_code']).sort_index()\n",
     "\n",
     "    return df\n",
     "\n",
     "\n",
-    "df_pca = merge_bw()\n",
+    "df_pca = merge_bw().query(\"ts_code=='000001.SH'\")\n",
+    "df_pca.to_csv('/home/ubuntu/notebooks/DataSets/BW_INDEX_CSMAR/BW_5_CSMAR/BW6.csv')\n",
     "df_pca\n",
-    "\n",
-    "# df_pca.to_csv('/home/ubuntu/notebooks/DataSets/BW_INDEX_CSMAR/BW_5_CSMAR/BW6.csv')"
+    "# df_pca.dtypes\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "# @formatter:off"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    Variable |        Obs        Mean    Std. dev.       Min        Max\n",
+      "-------------+---------------------------------------------------------\n",
+      "  trade_year |      7,825    2006.382    9.289106       1990       2022\n",
+      "  trade_date |          0\n",
+      "        CEFD |      2,638   -9.649504    10.97018  -34.78167     133.71\n",
+      "        RIPO |      2,613     1.16221    2.236553    -.96225   48.89698\n",
+      "        NIPO |      2,615    1.992734    1.524207          0         28\n",
+      "-------------+---------------------------------------------------------\n",
+      "        TURN |      7,821    .0097319    .0091754     .00001     .13126\n",
+      "     TURN_MA |      6,622   -.0007512    .0071406  -.0139077   .0651523\n",
+      "          SR |      7,587    28.56857    21.92896       2.39      88.27\n",
+      "        lnPD |      7,577   -.2104398    .2839005    -1.4346     -.0237\n"
+     ]
+    }
+   ],
    "source": [
     "%%stata -d df_pca -force\n",
     "sum"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "# @formatter:on"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
    }
   }
  ],
