--- a/notebooks/IS-FinMarket.ipynb
+++ b/notebooks/IS-FinMarket.ipynb
@@ -182,14 +182,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
       "text/plain": "                   CEFD\nTradingDate            \n19980430     101.500000\n19980630      60.272500\n19980731      41.500000\n19980831      28.418000\n19980930      31.054000\n...                 ...\n20221216       1.787500\n20221219       0.104000\n20221220      -0.458947\n20221221      -0.160000\n20221222       0.008667\n\n[2638 rows x 1 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>CEFD</th>\n    </tr>\n    <tr>\n      <th>TradingDate</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>19980430</th>\n      <td>101.500000</td>\n    </tr>\n    <tr>\n      <th>19980630</th>\n      <td>60.272500</td>\n    </tr>\n    <tr>\n      <th>19980731</th>\n      <td>41.500000</td>\n    </tr>\n    <tr>\n      <th>19980831</th>\n      <td>28.418000</td>\n    </tr>\n    <tr>\n      <th>19980930</th>\n      <td>31.054000</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>20221216</th>\n      <td>1.787500</td>\n    </tr>\n    <tr>\n      <th>20221219</th>\n      <td>0.104000</td>\n    </tr>\n    <tr>\n      <th>20221220</th>\n      <td>-0.458947</td>\n    </tr>\n    <tr>\n      <th>20221221</th>\n      <td>-0.160000</td>\n    </tr>\n    <tr>\n      <th>20221222</th>\n      <td>0.008667</td>\n    </tr>\n  </tbody>\n</table>\n<p>2638 rows × 1 columns</p>\n</div>"
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,8 +382,8 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "                      pct_chg  index  trade_year      CEFD       RIPO  NIPO  \\\ntrade_date ts_code                                                            \n19901219   000001.SH  -0.0200      1        1990       NaN  48.896982   7.0   \n19901220   000001.SH   4.4109      2        1990       NaN        NaN   NaN   \n19901221   000001.SH   4.5407      3        1990       NaN        NaN   NaN   \n19901224   000001.SH   4.9666      4        1990       NaN        NaN   NaN   \n19901225   000001.SH   4.9760      5        1990       NaN        NaN   NaN   \n...                       ...    ...         ...       ...        ...   ...   \n20221201   000001.SH   0.4486   7807        2022 -1.194500  -0.116667   1.0   \n20221202   000001.SH  -0.2946   7808        2022  1.685714   0.514767   1.0   \n20221205   000001.SH   1.7639   7809        2022 -1.107368   0.439883   1.0   \n20221206   000001.SH   0.0224   7810        2022 -1.408421        NaN   NaN   \n20221207   000001.SH  -0.4020   7811        2022 -1.188333   0.335000   1.0   \n\n                         TURN   TURN_MA   SR  lnPD  \ntrade_date ts_code                                  \n19901219   000001.SH  0.00062       NaN  5.9   NaN  \n19901220   000001.SH  0.00012       NaN  5.9   NaN  \n19901221   000001.SH  0.00003       NaN  5.9   NaN  \n19901224   000001.SH  0.00004       NaN  5.9   NaN  \n19901225   000001.SH  0.00001       NaN  5.9   NaN  \n...                       ...       ...  ...   ...  \n20221201   000001.SH  0.00748  0.001557  NaN   NaN  \n20221202   000001.SH  0.00591 -0.000016  NaN   NaN  \n20221205   000001.SH  0.00866  0.002730  NaN   NaN  \n20221206   000001.SH  0.00722  0.001288  NaN   NaN  \n20221207   000001.SH  0.00685  0.000916  NaN   NaN  \n\n[7811 rows x 10 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th>pct_chg</th>\n      <th>index</th>\n      <th>trade_year</th>\n      <th>CEFD</th>\n      <th>RIPO</th>\n      <th>NIPO</th>\n      <th>TURN</th>\n      <th>TURN_MA</th>\n      <th>SR</th>\n      <th>lnPD</th>\n    </tr>\n    <tr>\n      <th>trade_date</th>\n      <th>ts_code</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>19901219</th>\n      <th>000001.SH</th>\n      <td>-0.0200</td>\n      <td>1</td>\n      <td>1990</td>\n      <td>NaN</td>\n      <td>48.896982</td>\n      <td>7.0</td>\n      <td>0.00062</td>\n      <td>NaN</td>\n      <td>5.9</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>19901220</th>\n      <th>000001.SH</th>\n      <td>4.4109</td>\n      <td>2</td>\n      <td>1990</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.00012</td>\n      <td>NaN</td>\n      <td>5.9</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>19901221</th>\n      <th>000001.SH</th>\n      <td>4.5407</td>\n      <td>3</td>\n      <td>1990</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.00003</td>\n      <td>NaN</td>\n      <td>5.9</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>19901224</th>\n      <th>000001.SH</th>\n      <td>4.9666</td>\n      <td>4</td>\n      <td>1990</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.00004</td>\n      <td>NaN</td>\n      <td>5.9</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>19901225</th>\n      <th>000001.SH</th>\n      <td>4.9760</td>\n      <td>5</td>\n      <td>1990</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.00001</td>\n      <td>NaN</td>\n      <td>5.9</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>20221201</th>\n      <th>000001.SH</th>\n      <td>0.4486</td>\n      <td>7807</td>\n      <td>2022</td>\n      <td>-1.194500</td>\n      <td>-0.116667</td>\n      <td>1.0</td>\n      <td>0.00748</td>\n      <td>0.001557</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>20221202</th>\n      <th>000001.SH</th>\n      <td>-0.2946</td>\n      <td>7808</td>\n      <td>2022</td>\n      <td>1.685714</td>\n      <td>0.514767</td>\n      <td>1.0</td>\n      <td>0.00591</td>\n      <td>-0.000016</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>20221205</th>\n      <th>000001.SH</th>\n      <td>1.7639</td>\n      <td>7809</td>\n      <td>2022</td>\n      <td>-1.107368</td>\n      <td>0.439883</td>\n      <td>1.0</td>\n      <td>0.00866</td>\n      <td>0.002730</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>20221206</th>\n      <th>000001.SH</th>\n      <td>0.0224</td>\n      <td>7810</td>\n      <td>2022</td>\n      <td>-1.408421</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.00722</td>\n      <td>0.001288</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>20221207</th>\n      <th>000001.SH</th>\n      <td>-0.4020</td>\n      <td>7811</td>\n      <td>2022</td>\n      <td>-1.188333</td>\n      <td>0.335000</td>\n      <td>1.0</td>\n      <td>0.00685</td>\n      <td>0.000916</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n<p>7811 rows × 10 columns</p>\n</div>"
+      "text/plain": "                      pct_chg  index  trade_year       CEFD      RIPO  NIPO  \\\ntrade_date ts_code                                                            \n20100104   000001.SH  -1.0185   4670        2010 -17.830000  0.000000   0.0   \n20100105   000001.SH   1.1844   4671        2010 -17.840000  0.000000   0.0   \n20100106   000001.SH  -0.8520   4672        2010 -17.720000  0.617127   3.0   \n20100107   000001.SH  -1.8880   4673        2010 -16.870000  0.058932   1.0   \n20100108   000001.SH   0.1009   4674        2010 -17.595926  0.319774   6.0   \n...                       ...    ...         ...        ...       ...   ...   \n20211227   000001.SH  -0.0575   7582        2021  -2.258667  0.079280   1.0   \n20211228   000001.SH   0.3910   7583        2021  -2.880625  0.107463   4.0   \n20211229   000001.SH  -0.9121   7584        2021  -2.787500  0.000000   0.0   \n20211230   000001.SH   0.6169   7585        2021  -3.135625  0.259762   3.0   \n20211231   000001.SH   0.5688   7586        2021   2.008500  0.441176   1.0   \n\n                         TURN   TURN_MA     SR    lnPD  \ntrade_date ts_code                                      \n20100104   000001.SH  0.00710 -0.006496  32.76 -0.3186  \n20100105   000001.SH  0.00819 -0.005408  32.76 -0.3186  \n20100106   000001.SH  0.00802 -0.005580  32.76 -0.3186  \n20100107   000001.SH  0.00834 -0.005263  32.76 -0.3186  \n20100108   000001.SH  0.00643 -0.007174  32.76 -0.3186  \n...                       ...       ...    ...     ...  \n20211227   000001.SH  0.00675  0.001142   6.95 -0.0318  \n20211228   000001.SH  0.00647  0.000860   6.95 -0.0318  \n20211229   000001.SH  0.00624  0.000628   6.95 -0.0318  \n20211230   000001.SH  0.00627  0.000655   6.95 -0.0318  \n20211231   000001.SH  0.00672  0.001102   6.95 -0.0318  \n\n[2917 rows x 10 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th>pct_chg</th>\n      <th>index</th>\n      <th>trade_year</th>\n      <th>CEFD</th>\n      <th>RIPO</th>\n      <th>NIPO</th>\n      <th>TURN</th>\n      <th>TURN_MA</th>\n      <th>SR</th>\n      <th>lnPD</th>\n    </tr>\n    <tr>\n      <th>trade_date</th>\n      <th>ts_code</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>20100104</th>\n      <th>000001.SH</th>\n      <td>-1.0185</td>\n      <td>4670</td>\n      <td>2010</td>\n      <td>-17.830000</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.00710</td>\n      <td>-0.006496</td>\n      <td>32.76</td>\n      <td>-0.3186</td>\n    </tr>\n    <tr>\n      <th>20100105</th>\n      <th>000001.SH</th>\n      <td>1.1844</td>\n      <td>4671</td>\n      <td>2010</td>\n      <td>-17.840000</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.00819</td>\n      <td>-0.005408</td>\n      <td>32.76</td>\n      <td>-0.3186</td>\n    </tr>\n    <tr>\n      <th>20100106</th>\n      <th>000001.SH</th>\n      <td>-0.8520</td>\n      <td>4672</td>\n      <td>2010</td>\n      <td>-17.720000</td>\n      <td>0.617127</td>\n      <td>3.0</td>\n      <td>0.00802</td>\n      <td>-0.005580</td>\n      <td>32.76</td>\n      <td>-0.3186</td>\n    </tr>\n    <tr>\n      <th>20100107</th>\n      <th>000001.SH</th>\n      <td>-1.8880</td>\n      <td>4673</td>\n      <td>2010</td>\n      <td>-16.870000</td>\n      <td>0.058932</td>\n      <td>1.0</td>\n      <td>0.00834</td>\n      <td>-0.005263</td>\n      <td>32.76</td>\n      <td>-0.3186</td>\n    </tr>\n    <tr>\n      <th>20100108</th>\n      <th>000001.SH</th>\n      <td>0.1009</td>\n      <td>4674</td>\n      <td>2010</td>\n      <td>-17.595926</td>\n      <td>0.319774</td>\n      <td>6.0</td>\n      <td>0.00643</td>\n      <td>-0.007174</td>\n      <td>32.76</td>\n      <td>-0.3186</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>20211227</th>\n      <th>000001.SH</th>\n      <td>-0.0575</td>\n      <td>7582</td>\n      <td>2021</td>\n      <td>-2.258667</td>\n      <td>0.079280</td>\n      <td>1.0</td>\n      <td>0.00675</td>\n      <td>0.001142</td>\n      <td>6.95</td>\n      <td>-0.0318</td>\n    </tr>\n    <tr>\n      <th>20211228</th>\n      <th>000001.SH</th>\n      <td>0.3910</td>\n      <td>7583</td>\n      <td>2021</td>\n      <td>-2.880625</td>\n      <td>0.107463</td>\n      <td>4.0</td>\n      <td>0.00647</td>\n      <td>0.000860</td>\n      <td>6.95</td>\n      <td>-0.0318</td>\n    </tr>\n    <tr>\n      <th>20211229</th>\n      <th>000001.SH</th>\n      <td>-0.9121</td>\n      <td>7584</td>\n      <td>2021</td>\n      <td>-2.787500</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.00624</td>\n      <td>0.000628</td>\n      <td>6.95</td>\n      <td>-0.0318</td>\n    </tr>\n    <tr>\n      <th>20211230</th>\n      <th>000001.SH</th>\n      <td>0.6169</td>\n      <td>7585</td>\n      <td>2021</td>\n      <td>-3.135625</td>\n      <td>0.259762</td>\n      <td>3.0</td>\n      <td>0.00627</td>\n      <td>0.000655</td>\n      <td>6.95</td>\n      <td>-0.0318</td>\n    </tr>\n    <tr>\n      <th>20211231</th>\n      <th>000001.SH</th>\n      <td>0.5688</td>\n      <td>7586</td>\n      <td>2021</td>\n      <td>2.008500</td>\n      <td>0.441176</td>\n      <td>1.0</td>\n      <td>0.00672</td>\n      <td>0.001102</td>\n      <td>6.95</td>\n      <td>-0.0318</td>\n    </tr>\n  </tbody>\n</table>\n<p>2917 rows × 10 columns</p>\n</div>"
      },
      "execution_count": 21,
      "metadata": {},
@@ -408,26 +408,31 @@
     "    df = df.reset_index()\n",
     "\n",
     "    \"\"\"\n",
-    "    空值处理,IPO填充0,CEFD回填\n",
-    "    \"\"\"\n",
-    "    df = df.fillna(0)\n",
-    "\n",
-    "    \"\"\"\n",
     "    合并股指市场数据\n",
     "    \"\"\"\n",
     "    # 20170824\n",
-    "    df = pd.merge(\n",
-    "            pd.read_parquet('/data/DataSets/investor_sentiment/IDX_BAR_PANEL.parquet', columns=['ts_code', 'pct_chg']).reset_index(),\n",
-    "            df.reset_index(),\n",
-    "            left_on='trade_date', right_on='trade_date', how='left').set_index(['trade_date', 'ts_code']).sort_index()\n",
+    "    df = (\n",
+    "            pd.merge(\n",
+    "                    pd.read_parquet('/data/DataSets/investor_sentiment/IDX_BAR_PANEL.parquet',\n",
+    "                                    columns=['ts_code', 'pct_chg']).reset_index(),\n",
+    "                    df.reset_index(),\n",
+    "                    left_on='trade_date', right_on='trade_date', how='left'\n",
+    "            ).set_index(['trade_date', 'ts_code']).sort_index()\n",
+    "            .query(\"ts_code=='000001.SH'&20100101<=trade_date<=20211231\")\n",
+    "    )\n",
+    "\n",
+    "    \"\"\"\n",
+    "    空值处理,IPO填充0,CEFD用历史数据回填\n",
+    "    \"\"\"\n",
+    "    df.loc[:, ['RIPO', 'NIPO']] = df.loc[:, ['RIPO', 'NIPO']].fillna(value=0)\n",
+    "    df.loc[:, ['CEFD']] = df.loc[:, ['CEFD']].fillna(method=\"ffill\")\n",
     "\n",
     "    return df\n",
     "\n",
     "\n",
-    "df_pca = merge_bw().query(\"ts_code=='000001.SH'\")\n",
+    "df_pca = merge_bw()\n",
     "df_pca.to_csv('/home/ubuntu/notebooks/DataSets/BW_INDEX_CSMAR/BW_5_CSMAR/BW6.csv')\n",
-    "df_pca\n",
-    "# df_pca.dtypes\n"
+    "df_pca"
    ],
    "metadata": {
     "collapsed": false
@@ -455,16 +460,17 @@
       "\n",
       "    Variable |        Obs        Mean    Std. dev.       Min        Max\n",
       "-------------+---------------------------------------------------------\n",
-      "  trade_year |      7,825    2006.382    9.289106       1990       2022\n",
-      "  trade_date |          0\n",
-      "        CEFD |      2,638   -9.649504    10.97018  -34.78167     133.71\n",
-      "        RIPO |      2,613     1.16221    2.236553    -.96225   48.89698\n",
-      "        NIPO |      2,615    1.992734    1.524207          0         28\n",
+      "     pct_chg |      7,811    .0693997    2.377133   -16.3937   105.2691\n",
+      "       index |      7,811        3906    2254.986          1       7811\n",
+      "  trade_year |      7,811    2006.358    9.273684       1990       2022\n",
+      "        CEFD |      7,811   -3.258462    7.839892  -34.78167     133.71\n",
+      "        RIPO |      7,811     .388489    1.404912    -.96225   48.89698\n",
       "-------------+---------------------------------------------------------\n",
-      "        TURN |      7,821    .0097319    .0091754     .00001     .13126\n",
-      "     TURN_MA |      6,622   -.0007512    .0071406  -.0139077   .0651523\n",
-      "          SR |      7,587    28.56857    21.92896       2.39      88.27\n",
-      "        lnPD |      7,577   -.2104398    .2839005    -1.4346     -.0237\n"
+      "        NIPO |      7,811    .6652157    1.288655          0         28\n",
+      "        TURN |      7,811    .0097375    .0091799     .00001     .13126\n",
+      "     TURN_MA |      7,811   -.0006361    .0065801  -.0139077   .0651523\n",
+      "          SR |      7,811    27.74854    22.13282          0      88.27\n",
+      "        lnPD |      7,811   -.2041355    .2819073    -1.4346          0\n"
      ]
     }
    ],
